prettier & husky 적용

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -1,23 +1,35 @@
-<!doctype html><html lang="ko"><head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-  <link rel="stylesheet" href="popup.css">
-  <title>Lock Picker</title>
-</head><body>
-<div class="whole">
-  <div class="title">Lock Picker 메뉴</div>
-  <hr>
-  <div class="menu">
-    <button class="menu-item run-lock-picker" title="프로텍트 팔로워를 찾습니다.">
-      <img class="big-button-img" src="/icons/icon-original.png" alt="Lock Picker">
-      Lock Picker 실행
-    </button>
-  </div>
-  <hr>
-  <div class="current-options">
-    <div class="currentVersion"></div>
-  </div>
-</div>
-<script src="../vendor/browser-polyfill.min.js"></script>
-<script src="popup.js"></script>
-</body></html>
+<!DOCTYPE html>
+<html lang="ko">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, minimum-scale=1.0"
+    />
+    <link rel="stylesheet" href="popup.css" />
+    <title>Lock Picker</title>
+  </head>
+  <body>
+    <div class="whole">
+      <div class="title">Lock Picker 메뉴</div>
+      <hr />
+      <div class="menu">
+        <button
+          class="menu-item run-lock-picker"
+          title="프로텍트 팔로워를 찾습니다."
+        >
+          <img
+            class="big-button-img"
+            src="/icons/icon-original.png"
+            alt="Lock Picker"
+          />
+          Lock Picker 실행
+        </button>
+      </div>
+      <hr />
+      <div class="current-options"><div class="currentVersion"></div></div>
+    </div>
+    <script src="../vendor/browser-polyfill.min.js"></script>
+    <script src="popup.js"></script>
+  </body>
+</html>
