--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -16,14 +16,14 @@
       <div class="menu">
         <button
           class="menu-item run-lock-picker"
-          title="프로텍트 팔로워를 찾습니다."
+          title="Lock Picker가 프로텍트 팔로워를 찾습니다."
         >
           <img
             class="big-button-img"
             src="/icons/icon-original.png"
             alt="Lock Picker"
           />
-          Lock Picker 실행
+          프로텍트 팔로워 찾기
         </button>
       </div>
       <hr />
